--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="container-xl">
                 <div class="menu_Header_nen">
                     <div class="logo_Img">
-                        <img src="./images/logo.png" alt="logo">
+                        <img src="/assets/images/logo.png" alt="logo">
                     </div>
                     <div class="menu_Main">
                         <ul class="list_Menu">
