--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
         <div class="container-xl">
             <div class="row">
                 <div class="col-md-3 logo_item">
-                    <img src="/assets/images/logo_1.png" alt="logo_1">
+                    <img src="./assets/images/logo_1.png" alt="logo_1">
                 </div>
                 <div class="col-md-3 logo_item">
-                    <img src="/assets/images/logo_2.png" alt="logo_2">
+                    <img src="./assets/images/logo_2.png" alt="logo_2">
                 </div>
                 <div class="col-md-3 logo_item">
-                    <img src="/assets/images/logo_3.png" alt="logo_3">
+                    <img src="./assets/images/logo_3.png" alt="logo_3">
                 </div>
                 <div class="col-md-3 logo_item">
-                    <img src="/assets/images/logo_4.png" alt="logo_4">
+                    <img src="./assets/images/logo_4.png" alt="logo_4">
                 </div>
             </div>
         </div>
@@ -125,7 +125,7 @@
 
 
                     <div class="what_we_do_business_img">
-                        <img src="/assets/images/what_we_do_business.png" alt="what_we_do_business">
+                        <img src="./assets/images/what_we_do_business.png" alt="what_we_do_business">
                     </div>
 
                 </div>
@@ -297,40 +297,37 @@
     </section>
     <!-- section_Sabil_landing_page -->
     <section class="Sabil_landing_page">
-        <div class=" landing_page_Main ">
-            <div class=" landing_page_img ">
+        <div class="landing_page_Main ">
+            <div class="landing_page_img ">
                 <div class=" khungAnh img4And3 ">
-                    <img src=" /assets/images/landing_page.jpg " alt=" landing_page ">
+                    <img src="./assets/images/landing_page.jpg " alt=" landing_page ">
                 </div>
             </div>
-            <div class=" container-xl ipad_re ">
-                <div class=" landing_page_content ">
+            <div class="container-xl ipad_re ">
+                <div class="landing_page_content ">
                     <h3>Sabil Landing page comes with lots of benifits!</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et purus a odio finibus bibendum in sit amet leo.</p>
-                    <div class=" list_content ">
-                        <div class=" content_item ">
+                    <div class="list_content ">
+                        <div class="content_item ">
+                            <span class="dau_Bang ">=</span>
+                            <p>Lorem ipsum dolor sit amet</p>
+                        </div>
+                        <div class="content_item ">
                             <span class=" dau_Bang ">=</span>
                             <p>Lorem ipsum dolor sit amet</p>
                         </div>
-                        <div class=" content_item ">
-                            <span class=" dau_Bang ">=</span>
+                        <div class="content_item ">
+                            <span class="dau_Bang ">=</span>
                             <p>Lorem ipsum dolor sit amet</p>
                         </div>
-                        <div class=" content_item ">
-                            <span class=" dau_Bang ">=</span>
-                            <p>Lorem ipsum dolor sit amet</p>
-                        </div>
-                        <div class=" content_item ">
-                            <span class=" dau_Bang ">=</span>
+                        <div class="content_item ">
+                            <span class="dau_Bang">=</span>
                             <p>Lorem ipsum dolor sit amet</p>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-
-
     </section>
     <!-- section_Sabil_one_page -->
     <section class="Sabil_one_page">
@@ -349,7 +346,7 @@
                 </div>
                 <div class="one_page_img">
                     <div class="khungAnh img4And3">
-                        <img src="/assets/images/one_page.jpg" alt="one_page">
+                        <img src="./assets/images/one_page.jpg" alt="one_page">
                     </div>
                 </div>
             </div>
@@ -368,37 +365,37 @@
                         <div class="col-md-4">
                             <div class="people_item">
                                 <div class="avatar">
-                                    <img src="/assets/images/avatar_1.jpg" alt="avatar_1">
+                                    <img src="./assets/images/avatar_1.jpg" alt="avatar_1">
                                 </div>
-                                <div class=" people_comment ">
+                                <div class="people_comment ">
                                     <p>" Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live. "</p>
                                 </div>
-                                <h4 class=" people_name ">- John Doe -</h4>
-                                <p class=" people_job ">Product Designer @Google</p>
+                                <h4 class="people_name ">- John Doe -</h4>
+                                <p class="people_job ">Product Designer @Google</p>
                             </div>
                         </div>
-                        <div class=" col-md-4 ">
-                            <div class=" people_item ">
-                                <div class=" avatar ">
-                                    <img src=" /assets/images/avatar_2.jpg " alt=" avatar_2 ">
+                        <div class="col-md-4 ">
+                            <div class="people_item ">
+                                <div class="avatar">
+                                    <img src="./assets/images/avatar_2.jpg" alt="avatar_2">
                                 </div>
-                                <div class=" people_comment ">
+                                <div class="people_comment">
                                     <p>" Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live. "</p>
                                 </div>
-                                <h4 class=" people_name ">- Kevin Steve -</h4>
-                                <p class=" people_job ">Product Designer @Google</p>
+                                <h4 class="people_name">- Kevin Steve -</h4>
+                                <p class="people_job">Product Designer @Google</p>
                             </div>
                         </div>
-                        <div class=" col-md-4 ">
-                            <div class=" people_item ">
-                                <div class=" avatar ">
-                                    <img src=" /assets/images/avatar_3.jpg " alt=" avatar_3 ">
+                        <div class="col-md-4 ">
+                            <div class="people_item ">
+                                <div class="avatar">
+                                    <img src="./assets/images/avatar_3.jpg" alt="avatar_3">
                                 </div>
-                                <div class=" people_comment ">
-                                    <p>" Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live. "</p>
+                                <div class="people_comment ">
+                                    <p>"Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live. "</p>
                                 </div>
-                                <h4 class=" people_name ">- Ross Standford -</h4>
-                                <p class=" people_job ">Product Designer @Google</p>
+                                <h4 class="people_name">- Ross Standford -</h4>
+                                <p class="people_job">Product Designer @Google</p>
                             </div>
                         </div>
                     </div>
@@ -556,7 +553,7 @@
     <!-- section_video -->
     <section class="Sabil_video">
         <video class="myVideo" autoplay loop muted>
-            <source type="video/mp4" src="/assets/video/Sabli_video.mp4">
+            <source type="video/mp4" src="./assets/video/Sabli_video.mp4">
         </video>
         <div class="video_content">
             <h3>Still confused choosing the right plan?</h3>
@@ -620,7 +617,7 @@
                 <div class="row">
                     <div class="col-md-4 footer_left">
                         <div class="logo_Img">
-                            <img src="../assets/images/logo.png" alt="logo">
+                            <img src="./assets/images/logo.png" alt="logo">
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam et purus a odio finibus bibendum in sit amet leo. Mauris feugiat erat tellus</p>
                         <div class="socical_icon">
@@ -659,10 +656,10 @@
                     <div class="col-md-4 footer_right">
                         <h5 class="footer_right_name">PAYMENT METHODS</h5>
                         <div class="logo_pay">
-                            <img src="/assets/images/logo_pay_1.png" alt="logo_pay_1">
-                            <img src="/assets/images/logo_pay_2.png" alt="logo_pay_2">
-                            <img src="/assets/images/logo_pay_3.png" alt="logo_pay_3">
-                            <img src="/assets/images/logo_pay_4.png" alt="logo_pay_4">
+                            <img src="./assets/images/logo_pay_1.png" alt="logo_pay_1">
+                            <img src="./assets/images/logo_pay_2.png" alt="logo_pay_2">
+                            <img src="./assets/images/logo_pay_3.png" alt="logo_pay_3">
+                            <img src="./assets/images/logo_pay_4.png" alt="logo_pay_4">
                         </div>
                         <p>© 2018. Sabil. All Rights Reserved</p>
                         <p>Designed by Divine-Store</p>
@@ -675,11 +672,11 @@
     </footer>
     <!-- end thuộc footer -->
     <div class=" end ">
-        <img src=" /assets/images/end.png " alt=" end ">
+        <img src="./assets/images/end.png " alt=" end ">
     </div>
 
 </body>
-<Script src="/assets/js/myJS.JS"></Script>
+<Script src="./assets/js/myJS.JS"></Script>
 
 
 </html>
